# Kafka-Flink-ClickHouse-Pipeline

./: .env.cloud.example  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CLICKHOUSE_SINK_IMPLEMENTATION.md  CODEBASE_INDEX.md  Cloud.md  HANDOVER_CHECKLIST.md  HƯỚNG_DẪN_TRIỂN_KHAI_BACKEND.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_SETUP_GUIDE.md  JAVA_FINAL_PROJECT_REQUIREMENT.md  Makefile  PHAN_CONG_CONG_VIEC.md  QUICKSTART_WITH_NEW_COMPONENTS.md  README.md  UPGRADE_PLAN.md  pom.xml  pyproject.toml  recommendations.json
Project/: .gitignore  PHAN_CONG_CONG_VIEC.md  docker-compose.yml
backend-api/: README.md  pom.xml
config/: dataset-source.example.json
desktop-admin/: .gitignore  README.md  pom.xml
docs/: ACTIVE_CART_SERVING_REPORT.md  AI_USAGE_LOG.md  ANDROID_ONBOARDING.md  ARCHITECTURE.md  AUDIT_REPORT.md  CLEANUP_AUDIT.md  CLEANUP_REPORT.md  CLOUD_DEPLOYMENT_RUNBOOK.md  CLOUD_E2E_ARCHITECTURE.md  CLOUD_E2E_RUNBOOK.md  CODEBASE_CLOSURE_PLAN.md  CODEBASE_COMPLETION_REPORT.md  COMPONENTS_ADDED.md  CURRENT_IMPLEMENTATION_STATUS.md  DATASET_NOTES.md  DEMO_RUN_LOG.md  DEMO_SCRIPT.md  DEPLOYMENT_CODE_STATUS.md  DE_UPGRADE_ROADMAP.md  FLINK_API_STRATEGY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  JAVA_COMPONENT_MIGRATION_MATRIX.md  LOCAL_RUNBOOK.md  MASS_QA_REPORT_JAVA.md  MAVEN_SETUP.md  MIGRATION_RISKS.md  PROGRESS.md  PROJECT1_BLUEPRINT_FINAL.md  PROPOSED_DELETIONS.md  PROPOSED_TARGET_TOPOLOGY.md  PROXY_SETUP.md  RECOVERY_VERIFICATION_RUNBOOK.md  REFACTOR_NOTES.md  RELEASE_NOTES.md  RUNTIME_CONFIGURATION.md  SHADED_JAR_ANALYSIS.md  (+6 more)
(+444 files in other folders)
