[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taobao-replay"
version = "0.1.0"
description = "Bounded-memory preparation and local replay for Taobao user behavior data"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
taobao-replay = "taobao_replay.cli:main"

[tool.setuptools]
package-dir = {"" = "producer/src"}

[tool.setuptools.packages.find]
where = ["producer/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
