[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taobao-replay"
version = "0.1.0"
description = "Bounded-memory replay and Kafka publishing for Taobao user behavior data"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
kafka = ["confluent-kafka[avro,schemaregistry]>=2.6,<3"]

[project.scripts]
taobao-replay = "taobao_replay.cli:main"

[tool.setuptools]
package-dir = {"" = "producer/src"}

[tool.setuptools.packages.find]
where = ["producer/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
